# php.nvim

./: README.md
lsp/: Cargo.toml
lsp/src/: injection.rs  lib.rs
lua/php/: artisan.lua  completions.lua  init.lua  lsp.lua  treesitter.lua
queries/blade/: injections.scm
scratch/: virt_text_playground.lua
scripts/: update_queries.lua
